# voiceclone

./: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
deploy/: setup-vps.sh  voiceclone.service
docs/: MODAL_DEPLOYMENT.md  VPS_DEPLOYMENT.md
modal_inference/: requirements.txt  tts_service.py
nginx/: nginx.conf
scripts/: setup_local.sh
src/voiceclone/: main.py
src/voiceclone/api/v1/: router.py  tts.py  voices.py  websocket.py
src/voiceclone/core/: config.py  database.py  logging.py
src/voiceclone/models/: voice.py
src/voiceclone/schemas/: tts.py  voice.py
src/voiceclone/services/: tts_client.py  voice_service.py
src/voiceclone/static/: docs.html
src/voiceclone/utils/: audio.py
tests/: test_voice_service.py
